# mini-parsec

./: README.md  pyproject.toml
mini-parsec/: __init__.py  __main__.py  databases.py  schemes.py  tokens.py
miniparsec/: __init__.py  __main__.py  crypt.py  databases.py  index.py  paths.py
miniparsec/schemes/: __init__.py  pibas.py  pibasdyn.py  pibasplus.py  pipackplus.py  scheme.py  sophos.py
miniparsec/utils/: __init__.py  console.py  datasets.py  file.py  folder.py  timing.py  watcher.py
