[tool.poetry]
name = "mini-parsec"
version = "0.1.0"
description = "Test SSE"
authors = ["Maximilien de Dinechin <m.dinechin@protonmail.com>"]
readme = "README.md"
packages = [{include = "mini_parsec"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
rich = "^13.4.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}
testing-postgresql = "^1.3.0"
sqlalchemy = "^2.0.15"
cryptography = "^41.0.1"
tqdm = "^4.65.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
